@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.28 2004/08/20 07:22:09 psavola Exp $
+$Id: CHANGES,v 1.29 2004/08/20 07:25:59 psavola Exp $
 
 08/20/2004	Minor documentation cleanups.
 
@@ -7,6 +7,8 @@ $Id: CHANGES,v 1.28 2004/08/20 07:22:09 psavola Exp $
                 but will later become available (e.g., Bluetooth) --
                 and then you wish to send HUP to radvd to activate the
                 configs.
+
+02/21/2004      Clean up the build environment, from Marko Myllynen.
 
 01/19/2004      Fix warnings on Linux kernel 2.6, make checking the IPv6
                 forwarding a bit more intelligent.
